# todoodle

./: LICENSE  README.md
backend/: .env  .gitignore  db.py  dependencies.txt  main.py  models.py  pyproject.toml  schemas.py
frontend/: package-lock.json
